# ahab

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: entrypoint.py
src/ahab/: deforestation.py  funky.py  project.py  result.py
src/ahab/solvers/: __init__.py  base.py  null.py  pdm.py  pipenv.py  poetry.py  pyproject.py  requirements.py
