[project]
name = "ahab"
version = "1.0.0-SNAPSHOT"
description = "Gathers information on dependencies used by your Python projects whether you use requiremens.txt, PDM, Poetry, PIpenv, or just plain pyproject.toml."
authors = [
    {name = "Ryan Smith", email = "ryan.d.smith.106@gmail.com"},
]
dependencies = [
    "attrs>=23.1.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "bandit>=1.7.5",
    "isort>=5.12.0",
]