[project]
name = "ahab"
version = "1.0.0.dev1"
description = "Gathers information on dependencies used by your Python projects whether you use requiremens.txt, PDM, Poetry, PIpenv, or just plain pyproject.toml."
authors = [
    {name = "Ryan Smith", email = "ryan.d.smith.106@gmail.com"},
]
dependencies = [
    "attrs>=23.1.0",
    "packaging>=23.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.2",
]